# xayn_dart_api_dl

./: Cargo.toml  NOTICE  README.md  rust-toolchain.toml  rustfmt.toml  test.sh
.ci/install-cargo-sort/: action.yml
.github/workflows/: audit.yml  integration_tests_ci.yml  labeler.yml  rust_ci.yml
dart-api-dl/: Cargo.toml
dart-api-dl-sys/: Cargo.toml  build.rs
dart-api-dl-sys/src/: lib.rs
dart-api-dl/src/: cobject.rs  handle.rs  lib.rs  lifecycle.rs  livecycle.rs  panic.rs  port.rs  ports.rs  slot.rs  utils.rs
dart-api-dl/src/cobject/: owned.rs  reference.rs  rust_values.rs  type_enums.rs
integration-tests-bindings/: Cargo.toml  build.rs  cbindgen.toml
integration-tests-bindings/src/: lib.rs
integration_tests/: .gitignore  analysis_options.yaml  ffigen.yaml  pubspec.yaml
integration_tests/include/: IntegrationTestsFfi.h
integration_tests/lib/: integration_tests.dart
integration_tests/lib/src/: genesis.dart  load_lib.dart
integration_tests/test/: integration_tests_test.dart
update-lib/: Cargo.toml
update-lib/src/: main.rs
