[workspace]
members = [
    "dart-api-dl",
    "dart-api-dl-sys",
    "integration-tests-bindings",
    "update-lib",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.64.0"

[workspace.dependencies]
once_cell = "1.15.0"
thiserror = "1.0.37"

[patch.crates-io]
xayn-dart-api-dl-sys = { path = "./dart-api-dl-sys" }
xayn-dart-api-dl = { path = "./dart-api-dl" }
