[package]
name = "xayn-dart-api-dl-sys"
version = "0.3.0+2.0.0"
edition = "2018"
license = "Apache-2.0"
links = "dart_api_dl"

[dependencies]

[dev-dependencies]
static_assertions = "1.1.0"

[build-dependencies]
semver = "1.0.4"
bindgen = "0.59.1"
cc = "1.0.71"

# v0.1.20 is on edition 2021 which is a problem as it means rust won't parse the
# the Cargo.toml manifest. We don't use it but cargo can't know that and as such
# downloads the sources and tries to parse the manifest.
[target.'cfg(target_os = "hermit")'.build-dependencies]
hermit-abi = ">=0.1.6, <0.1.20"
