[package]
name = "xayn-dart-api-dl-sys"
version = "0.3.0+2.0.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
links = "dart_api_dl"

[dev-dependencies]
static_assertions = "1.1.0"

[build-dependencies]
bindgen = "0.60.1"
cc = "1.0.73"
semver = "1.0.14"
