[package]
name = "xayn-dart-api-dl"
version = "0.3.0+2.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
dart-api-dl-sys = { package = "xayn-dart-api-dl-sys", version = "0.3.0" }
displaydoc = "0.2.3"
once_cell = { workspace = true }
static_assertions = "1.1.0"
thiserror = { workspace = true }
